tests/ui/single-use-lifetime/zero-uses-in-impl.stderr
error: lifetime parameter `'a` never used
  --> $DIR/zero-uses-in-impl.rs:8:6
   |
LL | impl<'a> Foo {}
   |      ^^
   |
note: the lint level is defined here
  --> $DIR/zero-uses-in-impl.rs:3:9
   |
LL | #![deny(unused_lifetimes)]
   |         ^^^^^^^^^^^^^^^^
help: elide the unused lifetime
   |
LL - impl<'a> Foo {}
LL + impl Foo {}
   |

error: aborting due to 1 previous error

